<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="nyc.c4q.buzzfeedhw.MainActivity"
    android:orientation="vertical"
    android:layout_gravity="center">



<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="40dp"
    android:background="">


    <TextView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@android:color/holo_red_dark"
        android:gravity="center"
        android:text="@string/buzzfeed_quizzes"
        android:textColor="@android:color/background_light"
        android:textSize="20sp"
        android:textStyle="bold" />

</LinearLayout>



    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="188dp"
        android:background="@drawable/food"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pick_your_favorite_food_and_we_ll_guess_your_age"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"/>


        <Button
            android:id="@+id/takeQuiz1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_quiz" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:background="@drawable/holiday"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/plan_your_office_holiday_party_and_we_ll_reveal_your_work_persona"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="bold" />


        <Button
            android:id="@+id/takeQuiz2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_quiz" />

    </LinearLayout>




    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="187dp"
        android:background="@drawable/workout"
        android:gravity="center"
        android:orientation="vertical">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/pick_a_workout_outfit_and_we_ll_reveal_your_favorite_type_of_exercise"
            android:textColor="@android:color/background_light"
            android:textSize="15sp"
            android:textStyle="bold"
            android:background="@color/colorPrimaryDark"
            android:layout_gravity="center"/>


        <Button
            android:id="@+id/takeQuiz3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/take_quiz" />


    </LinearLayout>



</LinearLayout>


